--- a/site/src/style/style.css
+++ b/site/src/style/style.css
@@ -147,3 +147,58 @@ code {
   background: url('https://api.iconify.design/fluent-emoji/thumbs-up.svg') no-repeat center center / contain;
   
 }
+
+.text-shad {
+  text-shadow: 0px 0px 2px rgba(0, 0, 0)
+}
+
+.level-no {
+  background-image: url('/levelno.png');
+  background-size: 220px 26px;
+  background-repeat: no-repeat;
+  display: inline-block;
+  image-rendering: pixelated;
+  width: 22px;
+  height: 26px;
+  margin-right: 2px;
+}
+
+.level-no-0 {
+  background-position-x: 0;
+}
+
+.level-no-1 {
+  background-position-x: -22px;
+}
+
+.level-no-2 {
+  background-position-x: -44px;
+}
+
+.level-no-3 {
+  background-position-x: -66px;
+}
+
+.level-no-4 {
+  background-position-x: -88px;
+}
+
+.level-no-5 {
+  background-position-x: -110px;
+}
+
+.level-no-6 {
+  background-position-x: -132px;
+}
+
+.level-no-7 {
+  background-position-x: -154px;
+}
+
+.level-no-8 {
+  background-position-x: -176px;
+} 
+
+.level-no-9 {
+  background-position-x: -198px;
+} 
