--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -4,6 +4,7 @@ import Nav from "../components/Nav.astro";
 
 import { CharacterModel } from "../types/character";
 import CharacterPopup from "../components/CharacterPopup.astro";
+import Footer from "../components/Footer.astro";
 
 let onlineCharacters: CharacterModel[] = [];
 
@@ -27,12 +28,10 @@ await getOnlineCharacters();
 ---
 
 <Layout title="Cool Game 3">
-  <main class="pb-24">
-    <Nav />
-
+  <main class='mt-12'>
     {
       onlineCharacters && onlineCharacters.length > 0 && (
-        <section class="text-white text-center my-8 text-xl">
+        <section class="text-white text-center text-xl">
           <h2 class="text-4xl font-bold">
             Players Online: {onlineCharacters.length}
           </h2>
@@ -91,6 +90,5 @@ await getOnlineCharacters();
       )
     }
   </main>
+  <Footer />
 </Layout>
-
-<style is:global></style>
