--- a/site/src/pages/rankings.astro
+++ b/site/src/pages/rankings.astro
@@ -24,25 +24,76 @@ const getRankings = async () => {
 const characters = await getRankings();
 ---
 
-<Layout title="Cool Game 3 - Rankings">
-  <main class="pb-24">
-    <Nav />
+<script>
+  const table = document.getElementById('rankings')
 
-    <section class="text-white text-center my-8 text-xl">
+  enum TableHeads {
+    Rank = 0,
+    Name = 1,
+    Lv = 2,
+    Job = 3,
+    Exp = 4,
+    Fame = 5,
+    Meso = 6,
+    PlayTime = 7
+  }
+
+  const sortTable = (column) => {
+    const rows = table.querySelectorAll(`tbody tr`);
+    const sortedRows = Array.from(rows).sort((a, b) => {
+
+      const cmpElementA = a.querySelectorAll(`td`)[column]
+      const cmpElementB = b.querySelectorAll(`td`)[column]
+
+      let cmpValueA: string | number = cmpElementA.textContent;
+      let cmpValueB: string | number = cmpElementB.textContent;
+
+      if (column == TableHeads.Lv || column == TableHeads.Exp || column == TableHeads.Fame || column == TableHeads.Meso || column == TableHeads.PlayTime) {
+        cmpValueA = Number(cmpElementA.getAttribute('data-number'))
+        cmpValueB = Number(cmpElementB.getAttribute('data-number'))
+        if (cmpValueA > cmpValueB)
+          return -1
+        else if (cmpValueA < cmpValueB)
+          return 1
+        else
+          return 0
+      } else {
+        // Order by name
+        if (cmpValueA < cmpValueB)
+          return -1
+        else if (cmpValueA > cmpValueB)
+          return 1
+        else
+          return 0
+      }
+    });
+    
+    table.querySelector(`tbody`).append(...sortedRows);
+    console.log('sorted by', column)
+  }
+
+  table.querySelectorAll(`th`).forEach((th, pos) => {
+    const button = th.getElementsByTagName(`button`)[0];
+    button && button.addEventListener(`click`, () => sortTable(pos));
+  });
+</script>
+<Layout title="Cool Game 3 - Rankings">
+  <main class="mt-12 pb-24">
+    <section class="text-white text-center text-xl">
       <h2 class="text-4xl font-bold">Total Characters: {characters.length}</h2>
       {
         characters && characters.length > 0 && (
-          <table class="mx-auto mt-8">
+          <table id="rankings" class="mx-auto mt-8">
             <thead>
               <tr>
-                <th class="text-left font-bold px-4" />
-                <th class="text-left font-bold px-4">Name</th>
-                <th class="text-left font-bold px-4">LV</th>
-                <th class="text-left font-bold px-4">Job</th>
-                <th class="text-left font-bold px-4">EXP</th>
-                <th class="text-left font-bold px-4">Fame</th>
-                <th class="text-left font-bold px-4">Meso</th>
-                <th class="text-right font-bold px-4">Play Time</th>
+                <th class="text-center font-bold px-4"><button type='button' class='text-center w-full hover:underline'>#</button></th>
+                <th class="text-left font-bold px-4"><button type='button' class='hover:underline'>Name</button></th>
+                <th class="text-left font-bold px-4"><button type='button' class='hover:underline'>LV</button></th>
+                <th class="text-left font-bold px-4"><button type='button' class='hover:underline'>Job</button></th>
+                <th class="text-left font-bold px-4"><button type='button' class='hover:underline'>EXP</button></th>
+                <th class="text-left font-bold px-4"><button type='button' class='hover:underline'>Fame</button></th>
+                <th class="text-left font-bold px-4"><button type='button' class='hover:underline'>Meso</button></th>
+                <th class="text-right font-bold px-4"><button type='button' class='hover:underline'>Play Time</button></th>
               </tr>
             </thead>
             <tbody>
@@ -64,14 +115,14 @@ const characters = await getRankings();
 
                 return (
                   <tr class="relative group even:bg-[rgba(255,255,255,0.05)] hover:bg-[rgba(255,255,255,0.125)]">
-                    <td class="text-right px-4 py-2">#{Rank}</td>
+                    <td class="text-right px-4 py-2" data-number={Rank}>#{Rank}</td>
                     <td class="text-left px-4 py-2 text-base font-arial">
                       <span class='bg-[#5479c4] border-solid border-white border-2 shadow-[0px_0px_3px_rgba(0,0,0,.5)] px-3 py-1 rounded-md text-white'>
                         {Name}          
                       </span>
                       <CharacterPopup character={character} />
                     </td>
-                    <td class="text-left px-4 py-2 font-bold text-base font-arial">
+                    <td class="text-left px-4 py-2 font-bold text-base font-arial" aria-label={`Level ${Level}`} data-number={Level}>
                       {Level.toString()
                         .split("")
                         .map((num: string) => (
@@ -79,13 +130,13 @@ const characters = await getRankings();
                         ))}
                     </td>
                     <td class="text-left px-4 py-2">{JobName}</td>
-                    <td class="text-left px-4 py-2">
+                    <td class="text-left px-4 py-2" data-number={((Exp / ExpRequired) * 100).toFixed(2)}>
                       {((Exp / ExpRequired) * 100).toFixed(2)}%
                     </td>
-                    <td class="text-left px-4 py-2">{Fame}</td>
-                    <td class="text-left px-4 py-2">{Meso.toLocaleString()}</td>
+                    <td class="text-left px-4 py-2" data-number={Fame}>{Fame}</td>
+                    <td class="text-left px-4 py-2" data-number={Meso}>{Meso.toLocaleString()}</td>
 
-                    <td class="text-right px-4 py-2">
+                    <td class="text-right px-4 py-2" data-number={playTimeHrs}>
                       <time datetime={playTimeHrs.toString()}>
                         {playTimeHrs} hrs
                       </time>
