--- a/site/src/pages/signup.astro
+++ b/site/src/pages/signup.astro
@@ -4,6 +4,7 @@ import Icon from "astro-icon";
 
 import yup from "yup";
 import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
 
 let errorMessages: string[] = [];
 
@@ -77,8 +78,6 @@ if (Astro.request.method === "POST") {
 
 <Layout title="Cool Game 3 - Signup">
   <main>
-    <Nav noSignup={true}/>
-
     <h1 class="mt-8 text-4xl font-bold mb-8 text-white text-center">Sign up</h1>
     {
       isSuccess && (
@@ -221,4 +220,5 @@ if (Astro.request.method === "POST") {
       )
     }
   </main>
+  <Footer noSignup={true}/>
 </Layout>
