Added numbers to ranks

--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import "../style/style.css";
-import "../style/fonts.css";
+import "../style/style.scss";
+import "../style/fonts.sass";
 import { Picture } from "@astrojs/image/components";
 import Nav from "../components/Nav.astro";
 
