--- a/site/src/components/CharacterPopup.astro
+++ b/site/src/components/CharacterPopup.astro
@@ -29,7 +29,7 @@ const playTimeHrs = Math.floor(TotalPlayTime / 1000 / (60 * 60));
 ---
 
 <section
-  class="min-w-[320px] text-center group-hover:block hidden bg-[#e4e1d4] text-black border-[#5c7e9e] border-2 border-solid outline-white outline-none outline-2 outline-offset-0 shadow-lg shadow-black backdrop-blur absolute z-50 top-[-240px] left-[150px] px-4 py-2 rounded-lg"
+  class="min-w-[320px] text-center group-hover:block hidden bg-[#e4e1d4] text-black border-[#5c7e9e] border-2 border-solid outline-white outline-none outline-2 outline-offset-0 shadow-lg shadow-black backdrop-blur absolute z-50 top-[-240px] left-[15px] md:left-[150px] px-4 py-2 rounded-lg"
 >
   <span
     class="bg-[#5479c4] border-solid border-white border-2 shadow-[0px_0px_3px_rgba(0,0,0,.5)] px-3 py-1 rounded-md text-white"
@@ -40,11 +40,7 @@ const playTimeHrs = Math.floor(TotalPlayTime / 1000 / (60 * 60));
     <span>|</span>
     <span class="font-bold">LV.</span>
     <span class='level-no'>
-      {
-        Level.toString()
-          .split("")
-          .map((num: string) => <span class={`level-no-${num}`} />)
-      }
+      {Level.toString().split('').map(num => <span class={`level-no-${num}`} />)}
     </span>
   </div>
   <br />
