--- a/site/src/style/style.scss
+++ b/site/src/style/style.scss
@@ -4,29 +4,29 @@
   padding: 0;
   margin: 0;
 }
+
 :root {
   --accent: 124, 58, 237;
-  --accent-gradient: linear-gradient(
-    45deg,
-    rgb(var(--accent)),
-    #da62c4 30%,
-    white 60%
-  );
+  --accent-gradient: linear-gradient(45deg,
+      rgb(var(--accent)),
+      #da62c4 30%,
+      white 60%);
 }
+
 html {
   font-family: system-ui, sans-serif;
 }
+
 body {
   background: #000;
   min-height: 100vh;
-  background: linear-gradient(
-    0deg,
-    rgb(1, 1, 16) 0%,
-    rgb(18, 2, 23) 48%,
-    rgb(21, 14, 44) 100%
-  );
+  background: linear-gradient(0deg,
+      rgb(1, 1, 16) 0%,
+      rgb(18, 2, 23) 48%,
+      rgb(21, 14, 44) 100%);
   font-family: "Pixelated MS Sans Serif", Geneva, Tahoma, sans-serif;
 }
+
 code {
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
     DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
@@ -46,16 +46,19 @@ code {
   0% {
     text-indent: 100%;
   }
+
   100% {
     text-indent: -250%;
   }
 }
 
 @keyframes MoveUpDown {
+
   0%,
   100% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(25px);
   }
@@ -75,41 +78,42 @@ code {
   border: 1.25px solid white;
   outline: 1.25px solid #1084ff;
   text-shadow: 0px 0px 0px #0383ca;
-  background: linear-gradient(
-    to bottom,
-    #1084ff 0%,
-    #1084ff 10%,
-    #128eff 11%,
-    #128eff 20%,
-    #1494ff 21%,
-    #1494ff 30%,
-    #1699ff 31%,
-    #1699ff 40%,
-    #189cff 41%,
-    #189cff 50%,
-    #1aa4ff 51%,
-    #1aa4ff 60%,
-    #1caaff 61%,
-    #1caaff 70%,
-    #20b0ff 71%,
-    #24baff 80%,
-    #24baff 81%,
-    #27bfff 90%,
-    #2ac6ff 91%,
-    #2ac6ff 100%
-  );
+  background: linear-gradient(to bottom,
+      #1084ff 0%,
+      #1084ff 10%,
+      #128eff 11%,
+      #128eff 20%,
+      #1494ff 21%,
+      #1494ff 30%,
+      #1699ff 31%,
+      #1699ff 40%,
+      #189cff 41%,
+      #189cff 50%,
+      #1aa4ff 51%,
+      #1aa4ff 60%,
+      #1caaff 61%,
+      #1caaff 70%,
+      #20b0ff 71%,
+      #24baff 80%,
+      #24baff 81%,
+      #27bfff 90%,
+      #2ac6ff 91%,
+      #2ac6ff 100%);
 
   transition: all 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
   &:hover {
     filter: brightness(1.075);
   }
+
   &:hover svg:first-of-type {
     transform: translateY(-2px);
   }
+
   &:hover svg {
     filter: drop-shadow(0px 0px 8px #cbf1ff);
   }
+
   &:hover #sign-up-text text {
     fill: #fff;
     stroke: transparent;
@@ -145,7 +149,7 @@ code {
 .thumbs-up-icon {
   width: 48px;
   height: 48px;
-  background: url('https://api.iconify.design/fluent-emoji/thumbs-up.svg') no-repeat center center / contain;  
+  background: url('https://api.iconify.design/fluent-emoji/thumbs-up.svg') no-repeat center center / contain;
 }
 
 .text-shad {
@@ -153,56 +157,108 @@ code {
 }
 
 .level-no {
+  display: flex;
+  align-items: center;
   height: 26px;
+  white-space: nowrap;
 
-  > * {
+  >* {
     background-image: url('/levelno.png');
     background-size: 220px 26px;
     background-repeat: no-repeat;
-    display: inline-block;
     image-rendering: pixelated;
     width: 22px;
     height: 26px;
     margin-right: 2px;
   }
+
+  .level-no-0 {
+    background-position-x: 0
+  }
+
+  .level-no-1 {
+    background-position-x: -22px;
+  }
+
+  .level-no-2 {
+    background-position-x: -44px;
+  }
+
+  .level-no-3 {
+    background-position-x: -66px;
+  }
+
+  .level-no-4 {
+    background-position-x: -88px;
+  }
+
+  .level-no-5 {
+    background-position-x: -110px;
+  }
+
+  .level-no-6 {
+    background-position-x: -132px;
+  }
+
+  .level-no-7 {
+    background-position-x: -154px;
+  }
+
+  .level-no-8 {
+    background-position-x: -176px;
+  }
+
+  .level-no-9 {
+    background-position-x: -198px;
+  }
+
+  @media screen and (max-width: 600px) {
+    height: 13px;
+
+    >* {
+      background-size: 110px 13px;
+      width: 11px;
+      height: 13px;
+    }
+  
+    .level-no-0 {
+      background-position-x: 0
+    }
+  
+    .level-no-1 {
+      background-position-x: -11px;
+    }
+  
+    .level-no-2 {
+      background-position-x: -22px;
+    }
+  
+    .level-no-3 {
+      background-position-x: -33px;
+    }
+  
+    .level-no-4 {
+      background-position-x: -44px;
+    }
+  
+    .level-no-5 {
+      background-position-x: -55px;
+    }
+  
+    .level-no-6 {
+      background-position-x: -66px;
+    }
+  
+    .level-no-7 {
+      background-position-x: -77px;
+    }
+  
+    .level-no-8 {
+      background-position-x: -88px;
+    }
+  
+    .level-no-9 {
+      background-position-x: -99px;
+    }
+  }
 }
-
-.level-no-0 {
-  background-position-x: 0;
-}
-
-.level-no-1 {
-  background-position-x: -22px;
-}
-
-.level-no-2 {
-  background-position-x: -44px;
-}
-
-.level-no-3 {
-  background-position-x: -66px;
-}
-
-.level-no-4 {
-  background-position-x: -88px;
-}
-
-.level-no-5 {
-  background-position-x: -110px;
-}
-
-.level-no-6 {
-  background-position-x: -132px;
-}
-
-.level-no-7 {
-  background-position-x: -154px;
-}
-
-.level-no-8 {
-  background-position-x: -176px;
-} 
-
-.level-no-9 {
-  background-position-x: -198px;
-} 
