--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../style/style.scss";
 import "../style/fonts.sass";
+import { Spa } from "astro-spa";
 import { Picture } from "@astrojs/image/components";
 import Nav from "../components/Nav.astro";
 
@@ -36,6 +37,13 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <Spa
+      defaultAnimation={false}
+      progressBarOptions={{
+        height: '5px',
+        secondary: true
+      }}
+    />
     <p
       id="notice"
       style='font-family:"Pixelated Arial"'
