Updated avatar font

--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -52,7 +52,7 @@ await getOnlineCharacters();
                     alt=""
                     loading="lazy"
                   />
-                  <figcaption class="mt-2 bg-[#5479c4] border-solid border-white border-2 shadow-[0px_0px_3px_rgba(0,0,0,.5)] px-3 py-1 rounded-md text-white">
+                  <figcaption class="font-arial text-base mt-2 bg-[#5479c4] border-solid border-white border-2 shadow-[0px_0px_3px_rgba(0,0,0,.5)] px-3 py-1 rounded-md text-white">
                     {Name}
                   </figcaption>
                   <CharacterPopup character={character} />
